# frameio-kit

./: .gitignore  .pre-commit-config.yaml  404.html  AGENT.md  AGENTS.md  CHANGES.md  OAUTH_IMPLEMENTATION.md  OAUTH_QUICKSTART.md  README.md  index.html  justfile  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml  zensical.toml
.claude/proposals/: adobe-oauth-user-auth.md  github-issue-user-auth.md  implementation-tasks.md
.github/: dependabot.yaml  release.yml
.github/ISSUE_TEMPLATE/: bug.yaml  enhancement.yaml
.github/workflows/: publish-docs.yaml  publish.yaml  run-static.yaml  run-tests.yaml
api_reference/: index.html
docs/: CNAME  concepts.md  index.md
docs/getting-started/: installation.md  quickstart.md
docs/guides/: app.md  client-api.md  custom-actions.md  middleware.md  mounting.md  opentelemetry.md  self-service-install.md  user-auth.md  webhooks.md
docs/reference/: api.md
docs/usage/: app.md  client_api.md  custom_actions.md  getting_started.md  installation.md  middleware.md  mounting.md  user_auth.md  webhooks.md
examples/: oauth_custom_action.py  oauth_dynamodb_example.py  oauth_guide.md
examples/user_auth/: README.md  main.py
search/: search_index.json
src/frameio_kit/: __init__.py  _app.py  _auth_routes.py  _auth_templates.py  _client.py  _context.py  _encryption.py  _events.py  _exceptions.py  _install_config.py  _install_manager.py  _install_models.py  _install_routes.py  _install_secret_resolver.py  _install_templates.py  _install_ui.py  _manifest.py  _middleware.py  _oauth.py  _oauth_manager.py  _otel.py  _request_handler.py  _responses.py  _secret_resolver.py  _security.py  _state.py  _storage.py  _storage_dynamodb.py  app.py  events.py  oauth.py  token_stores.py  ui.py
src/framekit/: app.py
tests/: conftest.py  test_app.py  test_auth_routes.py  test_context.py  test_encryption.py  test_events.py  test_install_core.py  test_install_fields.py  test_install_integration.py  test_install_manager.py  test_install_models.py  test_install_routes.py  test_install_secret_resolver.py  test_installation.py  test_oauth.py  test_on_auth_complete.py  test_otel.py  test_require_auth.py  test_resource_type_filter.py  test_security.py  test_storage_dynamodb.py  test_storage_integration.py
usage/app/: index.html
usage/client_api/: index.html
usage/custom_actions/: index.html
usage/getting_started/: index.html
usage/installation/: index.html
usage/middleware/: index.html
usage/mounting/: index.html
usage/user_auth/: index.html
usage/webhooks/: index.html
