[project]
name = "frameio_kit"
version = "0.0.0"
description = "A Python framework for building Frame.io apps"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "cryptography>=44.0.0",
    "frameio>=0.0.23",
    "frameio-experimental>=0.0.3",
    "httpx>=0.28.1",
    "itsdangerous>=2.2.0",
    "pydantic>=2.11.10",
    "starlette>=0.48.0",
]
license = "MIT"
license-files = ["LICENSE"]
classifiers = [
	"Programming Language :: Python :: 3.14",
	"Programming Language :: Python :: Implementation :: CPython",
	"License :: OSI Approved :: MIT License",
	"Operating System :: OS Independent",
]
keywords = [
	"frameio",
	"frame-io",
    "frame.io",
	"video",
	"collaboration",
	"sdk",
	"api",
	"client",
	"integration",
	"webhook",
	"webhooks",
	"custom-actions",
	"asgi",
	"starlette",
	"async",
	"asyncio",
	"automation",
	"workflow",
	"media",
	"events",
]

[project.optional-dependencies]
dynamodb = ["aioboto3>=13.0.0"]
install = ["jinja2>=3.1.0", "python-multipart>=0.0.18"]

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.21",
    "mkdocstrings-python>=1.18.2",
    "ty>=0.0.15",
    "fastapi>=0.115.0",
    "aioboto3>=13.0.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.18",
    "prek>=0.3.0",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-xdist>=3.8.0",
    "ruff>=0.6.4",
    "uvicorn>=0.38.0",
]

[project.urls]
Homepage = "https://frameio-kit.dev"
Documentation = "https://frameio-kit.dev"
Changelog = "https://github.com/billyshambrook/frameio-kit/releases"
Repository = "https://github.com/billyshambrook/frameio-kit"
Issues = "https://github.com/billyshambrook/frameio-kit/issues"
Discussions = "https://github.com/billyshambrook/frameio-kit/discussions"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"

[tool.ty.environment]
python-version = "3.14"

[tool.ruff]
line-length = 120
target-version = "py314"
